--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,94 @@ table {
 
 /* desktop styles */
 
+.home__body {
+    background-image: url(../img/home_background.png);
+    background-repeat: repeat;
+}
+
+.home__container {
+    /* position: relative; */
+    /* width: 100%;
+    height: 100%; */
+}
+
+.home__background {
+    height: 100%;
+    width: 100%;
+}
+
+.home__tree01 {
+    position: absolute;
+    left: 0%;
+    bottom: 10%;
+    height: 80%;
+    z-index: -1;
+}
+
+.home__tree02 {
+    position: absolute;
+    right: 0%;
+    height: 80%;
+    z-index: -1;
+}
+
+.home__logo {
+    width: 18%;
+    position: absolute;
+    left: 5%;
+    top: 5%;
+}
+
+.home__buttons {
+    display: flex;
+    flex-direction: row;
+    z-index: 1;
+}
+
+.home__button__3-5 {
+    margin-top: 18%;
+    margin-left: 8%;
+    width: 30%;
+}
+
+.home__button__6-9 {
+    margin-top: 5%;
+    width: 40%;
+}
+
+.home__button__famydoc {
+    margin-top: 13%;
+    margin-right: 5%;
+    width: 30%;
+}
+
+#home__img__button__3-5 {
+    width: 75%;
+}
+
+#home__img__button__6-9 {
+    width: 80%;
+}
+
+#home__img__button__famydoc {
+    width: 80%;
+}
+
+.home__footer {
+    background-image: url(../img/home_footer_detail.png);
+    background-repeat: repeat-x;
+    width: 100%;
+    position: absolute;
+    left: 0%;
+    bottom: 0%;
+}
+
+.home__footer__logos {
+    /* width: 40%; */
+    height: 50%;
+
+}
+
 .nav {
     background-image: url("../img/nav_bar.png");
     background-repeat: repeat-x;
@@ -143,6 +231,7 @@ table {
 .la-serie__header__container {
     position: relative;
     width: 100%;
+    background-color: #a265ff;
 }
 
 .la-serie__header__background {
@@ -212,6 +301,7 @@ footer {
 .personajes-juana__header__container {
     position: relative;
     width: 100%;
+    background-color: #ed5a71;
 }
 
 .personajes-juana__header__background {
@@ -287,6 +377,7 @@ footer {
 .famydoc__header__container {
     position: relative;
     width: 100%;
+    background-color: #43a528;
 }
 
 .famydoc__header__background {
